# netbox-sqlquery

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
dev/: Dockerfile  docker-compose.yml  netbox.env  plugins.py
docker/: Dockerfile-Plugins  docker-compose.override.yml  plugin_requirements.txt
docs/: configuration.md  docker.md  installation.md  local-dev.md  operations.md  permissions.md  saved-queries.md  uninstall.md  usage.md
docs-internal/: CHANGELOG_2026_04_08.md  llm-host-bootstrap.md
netbox_sqlquery/: __init__.py  abstract_schema.py  access.py  filtersets.py  forms.py  llm.py  models.py  navigation.py  nl_agent.py  preferences.py  query.py  schema.py  sqlvalidate.py  tables.py  urls.py  views.py
netbox_sqlquery/api/: serializers.py  urls.py  views.py
netbox_sqlquery/management/commands/: sqlquery_create_views.py  sqlquery_nl.py
netbox_sqlquery/migrations/: 0001_initial.py  0002_query_permissions.py  0003_nlexample.py  0003_tablepermission_groups_to_users_group.py
netbox_sqlquery/static/netbox_sqlquery/: editor.js  icon.LICENSE
netbox_sqlquery/templates/netbox_sqlquery/: query.html  saved_query.html
netbox_sqlquery/tests/: test_access.py  test_api.py  test_models.py  test_nl_agent.py  test_sqlvalidate.py  test_views.py
scripts/: ollama-userdata.sh  setup_ollama.sh  test_llm_query.sh
