[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-sqlquery"
version = "0.1.2"
description = "SQL query interface for NetBox with syntax highlighting, abstract views, and role-based access control"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Ravi Pina", email = "ravi@pina.org" },
]

[tool.setuptools.packages.find]
include = ["netbox_sqlquery*"]

[tool.setuptools.package-data]
netbox_sqlquery = [
    "templates/**/*.html",
    "static/**/*",
]

[project.urls]
Homepage = "https://github.com/ravinald/netbox-sqlquery"
Issues = "https://github.com/ravinald/netbox-sqlquery/issues"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
